adding the terminal tag CSS stuff

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,10 @@
 
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
-
+    
+    <!-- the terminal tag CSS file -->
+    <link href="/css/terminal.css" rel="stylesheet">
+    
     <!-- Custom styles for this template -->
     <link href="/css/jumbotron-narrow.css" rel="stylesheet">
 
