--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,9 @@
     <!-- Custom styles for this template -->
     <link href="/css/jumbotron-narrow.css" rel="stylesheet">
 
+    <!-- css code for the terminal support -->
+    <link href="http://aaronmck.github.io/css/terminal.css" rel="stylesheet"></link>
+    
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
