--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
     <link href="/css/jumbotron-narrow.css" rel="stylesheet">
 
     <!-- css code for the terminal support -->
-    <link href="http://aaronmck.github.io/css/terminal.css" rel="stylesheet"></link>
+    <link href="/css/terminal.css" rel="stylesheet"></link>
     
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
