--- a/css/terminal.css
+++ b/css/terminal.css
@@ -139,7 +139,7 @@ div.terminal span.output { color: #BBB; }
 
 .shell-wrap {
   width: 500px;
-  margin: 100px auto 0 auto;
+  margin: 30px auto 30px auto;
   box-shadow: 0 0 30px rgba(0,0,0,0.4);
  
   -webkit-border-radius: 3px;
