change the title

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Gaint's shoulders</title>
+    <title>Wandering Thoughts</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
