--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -7,7 +7,7 @@
       <li><a href="/about/">About</a></li>
       <li><a href="/contact/">Contact</a></li>
     </ul>
-    <h3 class="text-muted">At best, a first pass</h3>
+    <h3 class="text-muted">Wandering Thoughts</h3>
   </div>
 
   <div class="row marketing">
